--- a/lab5.html
+++ b/lab5.html
@@ -15,7 +15,7 @@
                 line-height: 80px;
                 font-weight: bold;
                 text-align: left; 
-                padding: 10px 10px 18px 40px;
+                height: 80px;
                 padding-left: 30px;
             }
             .footer {
@@ -24,6 +24,9 @@
                 color: #888;
                 font-style: italic;
                 padding-right: 20;
+                line-height: 30px;
+                text-align: left;
+                height: 30px;
             }
         </style>
     </head>
@@ -32,7 +35,10 @@
             Руссу Кирилл
             </div>
         <div class="content">
-            text
+            <h1>Inline</h1>
+            <div class="a">block 1</div>
+            <div class="a">block 2</div>
+            <div class="a">block 3</div>
         </div>
         <div class="footer">
             Факультет бизнеса, ФБИ-01, 3 курс, 2022
