--- a/lab5.html
+++ b/lab5.html
@@ -28,6 +28,33 @@
                 text-align: left;
                 height: 30px;
             }
+            .a {
+                display: inline;
+                background-color: aqua;
+                border: solid;
+                border-color: black;
+                border-radius: 6px;
+            }
+            .b {
+                height: 50px;
+                width: 200px; 
+                border: 5px;
+                background-color: #478;
+                float: left;
+                border: solid;
+                border-color: black;
+                border-radius: 6px;
+            }
+            .c {
+                height: 50px;
+                width: 200px; 
+                border: 5px;
+                background-color: #478;
+                float: right;
+                border: solid;
+                border-color: black;
+                border-radius: 6px;
+            }
         </style>
     </head>
     <body>
@@ -39,6 +66,17 @@
             <div class="a">block 1</div>
             <div class="a">block 2</div>
             <div class="a">block 3</div>
+
+            <h1>Float</h1>
+            <div class="b">block 1</div>
+            <div class="b">block 2</div>
+            <div class="b">block 3</div>
+
+            <div class="c">block 4</div>
+            <div class="c">block 5</div>
+            <div class="c">block 6</div>
+
+            <div style="clear: end">end</div>
         </div>
         <div class="footer">
             Факультет бизнеса, ФБИ-01, 3 курс, 2022
