--- a/lab5.html
+++ b/lab5.html
@@ -38,7 +38,6 @@
             .b {
                 height: 50px;
                 width: 200px; 
-                border: 5px;
                 background-color: #478;
                 float: left;
                 border: solid;
@@ -48,12 +47,14 @@
             .c {
                 height: 50px;
                 width: 200px; 
-                border: 5px;
                 background-color: #478;
                 float: right;
                 border: solid;
                 border-color: black;
                 border-radius: 6px;
+            }
+            .d {
+                position: relative;
             }
         </style>
     </head>
@@ -77,6 +78,27 @@
             <div class="c">block 6</div>
 
             <div style="clear: end">end</div>
+
+            <h1>Relative</h1>
+            <div class="d" style="top: -30px; right: -20px;">В тот год осенняя погода</div>
+            <div class="d" style="top: -18px; left: 60px;">Стояла долго на дворе,</div>
+            <div class="d" style="top: -23px; left: 70px;">Зимы ждала, ждала природа.</div>
+            <div class="d" style="top: -20px; left: 50px;">Снег выпал только в январе</div>
+            <h1>Absolute</h1>
+            <div>На третье в ночь. Проснувшись рано,</div>
+            <div>В окно увидела Татьяна</div>
+            <div style="position: absolute; left: 200px; top: 100px;">Поутру побелевший двор,</div>
+            <div>Куртины, кровли и забор,</div>
+
+            <h1>Fixed</h1>
+            <div style="position: fixed; bottom: 300px; right: 300px;">
+                На стеклах легкие узоры,<br>
+                Деревья в зимнем серебре,<br>
+                Сорко веселых на вдоре<br>
+                И мягко устланные горы<br>
+                Зимы блистательным ковром.<br>
+                Все ярко, все бело кругом.
+            </div>
         </div>
         <div class="footer">
             Факультет бизнеса, ФБИ-01, 3 курс, 2022
