--- a/lab6.html
+++ b/lab6.html
@@ -9,34 +9,38 @@
 
             let x = 33;
             let s = 'яблоки';
-            let if = 17;
             console.log('x=', x, 's=', s);
         </script>
+        <script src="lab6.js"></script>
     </head>
     <body>
         <div class="header">
-            Руссу Кирилл
+            <div id="student">Руссу Кирилл</div>
+            <div class="language">
+                <input type="button" value="ru" onclick="setRussian()">
+                <input type="button" value="en" onclick="setEnglish()">
+            </div>
             </div>
         <div class="content">
             <form>
                 <div>
                     <div>
-                        <span>Ваше имя</span>: <input type="text">
+                        <span id="your-name">Ваше имя</span>: <input type="text" placeholder="введите имя">
                     </div>
                     <div>
-                        <span>Ваша фамилия</span>: <input type="text">
+                        <span id="your-surname">Ваша фамилия</span>: <input type="text" placeholder="введите фамилию">
                     </div>
                     <div>
-                        <span>Ваш возраст</span>: <input type="number">
+                        <span id="your-age">Ваш возраст</span>: <input type="number" placeholder="введите возраст">
                     </div>
                     <div>
-                        <input type="button" value="ok">
-                        <input type="reset" value="сброс">
+                        <input type="button" value="ok" id="ok-button">
+                        <input type="reset" value="сброс" id="reset-button">
                     </div>
                 </div>
             </form>
         </div>
-        <div class="footer">
+        <div class="footer" id="footer">
             Факультет бизнеса, ФБИ-01, 3 курс, 2022
         </div>
     </body>
