--- a/lab6.html
+++ b/lab6.html
@@ -14,7 +14,7 @@
         <script src="lab6.js"></script>
     </head>
     <body>
-        <div class="header">
+        <div class="header" id=".header" onclick="showAlert3()">
             <div id="student">Руссу Кирилл</div>
             <div class="language">
                 <input type="button" value="ru" onclick="setRussian()">
@@ -23,24 +23,24 @@
             </div>
         <div class="content">
             <form>
-                <div>
+                <div id="user-data">
                     <div>
-                        <span id="your-name">Ваше имя</span>: <input type="text" placeholder="введите имя">
+                        <span id="your-name">Ваше имя</span>: <input type="text" id="input-name" placeholder="введите имя">
                     </div>
                     <div>
-                        <span id="your-surname">Ваша фамилия</span>: <input type="text" placeholder="введите фамилию">
+                        <span id="your-surname">Ваша фамилия</span>: <input type="text" id="input-surname" placeholder="введите фамилию">
                     </div>
                     <div>
-                        <span id="your-age">Ваш возраст</span>: <input type="number" placeholder="введите возраст">
+                        <span id="your-age">Ваш возраст</span>: <input type="number" id="input-age" placeholder="введите возраст">
                     </div>
                     <div>
-                        <input type="button" value="ok" id="ok-button">
-                        <input type="reset" value="сброс" id="reset-button">
+                        <input type="button" value="Ок" id="ok-button" onclick="showAlert()">
+                        <input type="reset" value="Сброс" id="reset-button">
                     </div>
                 </div>
             </form>
         </div>
-        <div class="footer" id="footer">
+        <div class="footer" id="footer" onclick="showAlert2()"> 
             Факультет бизнеса, ФБИ-01, 3 курс, 2022
         </div>
     </body>
