--- a/lab7.html
+++ b/lab7.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="lab7.css" type="text/css">
         <script src="lab7.js"></script>
     </head>
-    <body onload="makeStairs()">
+    <body onload="Makesnowing()">
         <div class="header">
             Руссу Кирилл
         </div>
@@ -40,6 +40,7 @@
                 </div>
             </form>
             <div id="stairs"></div>
+            <div id="snegopadius"></div>
         </div>
         
         <p>1*31=31</p>
@@ -51,6 +52,8 @@
         <p>7*31=217</p>
         <p>8*31=248</p>
         <p>9*31=279</p>
+         
+        <div id="snegopadius"></div>
 
         <div class="footer">
             Факультет бизнеса, ФБИ-01, 3 курс, 2022
