--- a/lab5.html
+++ b/lab5.html
@@ -32,7 +32,7 @@
                 left: 0;
                 bottom: 0;
                 width: 100%;
-                
+
             }
             .a {
                 display: inline;
@@ -70,6 +70,7 @@
                 width: 300px;
                 height: 100px;
                 position: relative;
+                text-align: center;
             }
             .j:hover {
                 background-color: #ff9100;
@@ -84,7 +85,7 @@
             Руссу Кирилл
             </div>
         <div class="content">
-            <h1>Inline</h1>
+            <br><h1>Inline</h1><br>
             <div class="a">block 1</div>
             <div class="a">block 2</div>
             <div class="a">block 3</div>
