Количество дней с даты рождения

--- a/lab8.html
+++ b/lab8.html
@@ -13,8 +13,15 @@
 
         <div class="content">
             Сегодня:
-            <div id="today">
+            <div id="today"></div>
+            <div>
+                Моя дата рождения: <input type="date">
             </div>
+            <div>
+                <button onclick="showDaysCount()">Рассчитать, сколько прошло дней</button>
+            </div>
+            <div id="result"></div>
+        </div>
         <div class="footer">
             Факультет бизнеса, ФБИ-01, 3 курс, 2022
         </div>
