--- a/lab8.html
+++ b/lab8.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Руссу Кирилл. ФБИ-01. Лабораторная работа 7</title>
+        <title>Руссу Кирилл. ФБИ-01. Лабораторная работа 8</title>
         <link rel="stylesheet" href="lab8.css" type="text/css">
         <script src="lab8.js"></script>
     </head>
     <body>
         <div class="header">
             Руссу Кирилл
+            <div id="time">0:00:00</div>
         </div>
 
         <div class="content">
