--- a/lab9.html
+++ b/lab9.html
@@ -15,6 +15,9 @@
             <div>
                 <button onclick="clickMe(this)">Щелчок</button>
             </div>
+            <div>
+                <button onclick="clickMe2(this)">Кирилл</button>
+            </div>
         </div>
         <div class="footer">
             Факультет бизнеса, ФБИ-01, 3 курс, 2022
