--- a/lab9.html
+++ b/lab9.html
@@ -18,6 +18,9 @@
             <div>
                 <button onclick="clickMe2(this)">Кирилл</button>
             </div>
+            <div>
+                <button onclick="knopka(this)">Нажми меня</button>
+            </div>
         </div>
         <div class="footer">
             Факультет бизнеса, ФБИ-01, 3 курс, 2022
